RESOLVED FIXED279605
getDisplayMedia track clone does not copy its video constraints
https://bugs.webkit.org/show_bug.cgi?id=279605
Summary getDisplayMedia track clone does not copy its video constraints
youenn fablet
Reported 2024-09-12 11:52:12 PDT
getDisplayMedia track clone does not copy its video constraints
Attachments
youenn fablet
Comment 1 2024-09-12 11:52:43 PDT
EWS
Comment 2 2024-09-13 05:38:02 PDT
Committed 283612@main (e1dc7148f9e6): <https://commits.webkit.org/283612@main> Reviewed commits have been landed. Closing PR #33561 and removing active labels.
EWS
Comment 3 2024-09-17 09:44:54 PDT
Committed 280938.343@safari-7619-branch (7cdad7428f4d): <https://commits.webkit.org/280938.343@safari-7619-branch> Reviewed commits have been landed. Closing PR #1780 and removing active labels.
EWS
Comment 4 2024-09-17 19:22:41 PDT
Committed 283286.62@safari-7620-branch (29744e2b45db): <https://commits.webkit.org/283286.62@safari-7620-branch> Reviewed commits have been landed. Closing PR #1772 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.