Cherry-pick e1dc7148f9e6. rdar://133611004

getDisplayMedia track clone does not copy its video constraints
    rdar://133611004
    https://bugs.webkit.org/show_bug.cgi?id=279605

    Reviewed by Jean-Yves Avenard.

    When cloning, we were copying current settings and constraints, but not the video constraints themselves.
    These video constraints are used in case of configuration change, for to apply max size constraints in case of source video frame size change.

    Video frame size change is happening for real display sources as we do not know the actual size until getting the first video frame.
    When cloning before receiving the first video frame, our size computation would be wrong.
    And whenever a window resize happens, it would also be wrong.

    To prevent this, we copy the video constraints to the clone track like we do for settings.
    Covered by a layout test that clones a track, and then trigger a source configuration change.

    * LayoutTests/fast/mediastream/getDisplayMedia-max-constraints5-expected.txt: Added.
    * LayoutTests/fast/mediastream/getDisplayMedia-max-constraints5.html: Added.
    * LayoutTests/platform/glib/TestExpectations:
    * LayoutTests/platform/ios/TestExpectations:
    * LayoutTests/platform/mac-site-isolation/TestExpectations:
    * Source/WebKit/UIProcess/Cocoa/UserMediaCaptureManagerProxy.cpp:

    Canonical link: https://commits.webkit.org/283612@main

Canonical link: https://commits.webkit.org/280938.343@safari-7619-branch